# OpenCamBridge

./: .gitignore  LICENSES.md  NOTICE.md  README.md  dev-build-vcam.ps1  dev-reset.ps1  dev-start.ps1
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
desktop/: README.md
desktop/tauri-app/: obs-auto-start.js  package-lock.json  package.json  test_cors.cjs  test_cors_all.cjs
desktop/tauri-app/src/: App.css  App.tsx
desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
docs/: MVP.md  desktop-virtual-camera-plan.md  droidcam-architecture.md  h264-scrcpy-audit.md  media-foundation-virtual-camera-plan.md  standalone-windows-virtual-camera.md  windows-desktop-mvp.md  windows-virtual-camera-plan.md  windows-virtual-camera-prototype.md
docs/experiments/: desktop-virtual-camera-plan.md  directshow-abandoned.md  standalone-windows-virtual-camera.md  windows-virtual-camera-plan.md  windows-virtual-camera-prototype.md
ios/: README.md
protocol/: SPEC.md
stitch_design/stitch_opencambridge_pro_ui_system/: brand_identity_tokens.md
windows/Shared/CameraKsPropertyHelper/: CameraKsPropertyHelper.vcxproj  (+8 more)
windows/virtual-camera-directshow/: register.ps1  register.reg  run-android-mjpeg.ps1  run-test-pattern.ps1  unregister.ps1
windows/virtual-camera-mediafoundation/: README.md  VirtualCameraSample.sln  register_hklm.bat  unregister_hklm.bat
windows/virtual-camera-mediafoundation/rust-frame-producer/: Cargo.toml
windows/virtual-camera-mediafoundation/rust-frame-producer/src/: main.rs
(+89 files in other folders)
